Fix mobile header shifting by using 100vh

--- a/src/index.css
+++ b/src/index.css
@@ -53,23 +53,21 @@
   padding-bottom: max(0.75rem, env(safe-area-inset-bottom));
 }
 
+
 .h-screen {
-  height: 100dvh;
-  height: 100svh;
+  height: 100vh;
 }
 
 @supports (-webkit-touch-callout: none) {
   .h-screen {
     height: -webkit-fill-available;
-    height: 100dvh;
-    height: 100svh;
+    height: 100vh;
   }
 }
 
 @media screen and (max-width: 768px) {
   .h-\[calc\(100vh-5rem\)\] {
     height: calc(100vh - 5rem);
-    height: calc(100dvh - 5rem);
   }
   
   body {
